--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ path('default') }}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Clientes</a>
+            <a class="nav-link" href="{{ path('listar_clientes') }}">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Animais</a>
+            <a class="nav-link" href="{{ path('listar_animais') }}">Animais</a>
           </li>
       </div>
     </nav>
