Convertendo parâmetro para objeto. Param Converter.

--- a/templates/animais/index.html.twig
+++ b/templates/animais/index.html.twig
@@ -22,7 +22,7 @@
             {% for animal in animais %}
                 <tr>
                     <td>{{ animal.id }}</td>
-                    <td><a href="">{{ animal.nome }}</a></td>
+                    <td><a href="{{ path('visualizar_animal', {'id': animal.id}) }}">{{ animal.nome }}</a></td>
                     <td>{{ animal.dataNascimento }}</td>
                 </tr>
             {% else %}
