Saçvando animal - Form EntityType.

--- a/templates/animais/view.html.twig
+++ b/templates/animais/view.html.twig
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <th>Data de Nascimento</th>
-            <td>{{ animal.dataNascimento }}</td>
+            <td>{{ animal.dataNascimento|date('d/m/Y') }}</td>
         </tr>
         <tr>
     </table>
